# DuckArrowBridge

./: CMakeLists.txt  README.md  example.parquet  test_output.parquet
data/: test_output_light.parquet
include/: data_processor.hpp  thread_pool.hpp
src/: data_processor.cpp  main.cpp  thread_pool.cpp
